# rustassone

./: .env  .gitignore  Cargo.toml  README.md  index.html  package.json
assets/: app.css  app.styl
migrations/2017-12-29-143344_create_tiles/: down.sql  up.sql
migrations/2017-12-29-144029_insert_tiles/: down.sql  up.sql
migrations/2017-12-31-152329_game_tables/: down.sql  up.sql
migrations/2018-07-06-184149_create_meeples_table/: down.sql  up.sql
migrations/2018-07-10-115356_turn_cycle_columns/: down.sql  up.sql
migrations/2018-07-12-122434_add_current_tile_id_to_game/: down.sql  up.sql
migrations/2018-07-16-171112_add_rotation_to_game_tiles/: down.sql  up.sql
src/: game.rs  js_models.rs  lib.rs  main.rs  models.rs  player.rs  schema.rs
src_js/: App.vue  tile_helper.js
src_js/components/: CurrentTile.vue  HelloComponent.vue  Player.vue  Tile.vue  TileRow.vue
static/: games.html  index.html  index_old.html
static/css/: index.css
static/js/: games.js  index.js
