[package]
name = "carcassonne"
version = "0.1.0"
authors = ["Tim Brenner <timpbrenner@gmail.com>"]

[dependencies]
diesel = { version = "0.99.0", features = ["postgres"] }
diesel_codegen = { version = "0.16.0", features = ["postgres"] }
dotenv = "0.9.0"
rocket = "0.3.5"
rocket_codegen = "0.3.5"
rocket_contrib = { version = "0.3.5", default-features = false, features = ["json"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
